--- a/style.css
+++ b/style.css
@@ -170,6 +170,10 @@ p {
     cursor: pointer;
     margin: 5px 2px;
 }
+.button_qc.dark-mode {
+    background-color: #e9e9e9;
+    color: #232323;
+}
 
 .button:hover {
     background-color: #2a4274;
@@ -321,4 +325,23 @@ p {
 .floating-button.dark-mode:hover {
     background-color: #ffffff;
     opacity:0.9;
+}
+.announcement {
+    background-color: #e9e9e9;
+    color: #333;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 20px auto;
+    width: 90%;
+    max-width: 800px;
+    text-align: center;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.announcement.dark-mode{
+    background-color: #333333;
+    color: #ffffff;
+}
+.announcement p {
+    margin: 5px 0 ;
 }
