--- a/v2_5_4_stabilze/style.css
+++ b/v2_5_4_stabilze/style.css
@@ -113,14 +113,11 @@ p {
 }
 
 .progress-bar {
-    position: sticky;
-    top: 1px; /* 距離螢幕頂端的距離 */
     width: 100%;
     background-color: #e6e6e6;
     border-radius: 5px;
     overflow: hidden;
     margin-bottom: 20px;
-    transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .progress-bar.dark-mode {
@@ -128,16 +125,15 @@ p {
 }
 
 .progress {
-    height: 15px;
+    height: 20px;
     background-color: #3b5998;
     width: 0;
     transition: width 0.3s ease;
 }
 
 .question {
-    margin: 15px 0;
+    margin: 0px 0;
     padding: 10px;
-    border-radius: 5px;
 }
 
 .question.dark-mode {
@@ -145,7 +141,7 @@ p {
     color: #ffffff;
 }
 .question.fill{
-    background-color:rgba(236, 243, 250, 0.9) ;
+    background-color:rgb(236, 243, 250) ;
 }
 .question.dark-mode.fill{
     background-color:#3e3e3e ;
@@ -163,26 +159,14 @@ p {
 }
 .options {
     margin: 10px 0;
-    
-    display: flex;
-    flex-direction: column; /* 選項垂直排列 */
-    gap: 2px; /* 選項之間的間距 */
 }
 
 .options label {
     display: block;
-    margin:  0;
+    margin: 5px 0;
     cursor: pointer;
-    display: flex;
-    align-items: flex-start; /* 對齊選項頂部 */
-    gap: 1px; /* 單選框與文字之間的間距 */
 }
 
-  
-.options span {
-word-break: break-word; /* 遇到長字時自動換行 */
-}
-  
 .button-group {
     text-align: center;
     margin-top: 20px;
@@ -372,10 +356,8 @@ word-break: break-word; /* 遇到長字時自動換行 */
     color: #ffffff;
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s, transform 0.3s ease, opacity 0.3s ease, right 0.3s ease, bottom 0.3s ease;
+    transition: background-color 0.3s;
     opacity:0.5;
-    
-
 }
 
 .floating-button:hover {
@@ -409,9 +391,4 @@ word-break: break-word; /* 遇到長字時自動換行 */
 }
 .announcement p {
     margin: 5px 0 ;
-}
-
-@media (max-width: 470px) {
-
-
 }
